--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -292,7 +292,7 @@ flintstone ,/n./@燧石;,/n./@打火石;
 forfeiture ,/n./@沒收財產;
 formidable ,/adj./@強大的;,/adj./@令人敬畏的;
 foundation ,/n./@建立;,/n./@基金会;,/n./@基础;,/n./@地基;
-fraternity ,/n./@兄弟会;,/n./@联谊会;
+fraternity ,/n./@兄弟会;,/n./@联谊会;,/n./@同行;,/n./@同僚;,/n./@同仁;,/n./@友爱;
 fraudulent ,/adj./@欺詐性的;
 frequently ,/adv./@频繁地;
 friendship ,/n./@友谊;
@@ -339,6 +339,7 @@ incurrence ,/n./@招致;,/n./@蒙受;
 indefinite ,/adj./@不明確的;,/adj./@不確定的;
 indelicate ,/adj./@下流的;,/adj./@不雅的;,/adj./@無教養的;
 indication ,/n./@象征;,/n./@迹象;
+indictment ,/n./@控告;,/n./@起訴;,/n./@状告;,/n./@罪证;
 individual ,/n./@个人;,/adj./@个人的;,/adj./@各自的;
 inducement ,/n./@誘導;,/n./@動機;
 industrial ,/adj./@工业的;
@@ -400,6 +401,7 @@ mechanical ,/adj./@机械的;
 meditation ,/n./@冥想;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
+mercantile ,/adj./@商業的;,/adj./@貿易的;,/adj./@商人的;
 metallurgy ,/n./@冶金学;
 methodical ,/adj./@有条理的;,/adj./@有条不紊的;
 microscope ,/n./@显微镜;
@@ -443,6 +445,7 @@ pagination ,/n./@分页;
 parametric ,/n./@參數;
 paranormal ,/adj./@超自然的;,/adj./@超常的;
 paraphrase ,/v./@釋義;,/v./@改述;
+Parisienne ,/n./@巴黎女子;,/n./@巴黎女孩;,/adj./@巴黎的;,/adj./@巴黎人的;,/adj./@巴黎式的;
 participle ,/n./@分詞;
 particular ,/adj./特定的;,/adj./@特殊的;,/adj./@挑剔的;,/n./@细节;,/n./@詳細情況;
 passionate ,/adj./@热烈的;
@@ -470,6 +473,7 @@ playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
 possession ,/n./@資產;,/n./@所有;
+precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
 prediction ,/n./@预言;
 preferable ,/adj./@更合适的;,/adj./@更好的;,/adj./@更可取的;
@@ -581,6 +585,7 @@ supersonic ,/adj./@超音速的;,/n./@超音速;
 supplement ,/v./@增補;,/v./@補充;,/n./@補充;
 supplicate ,/vt./@懇求;,/vt./@哀求;
 suspicious ,/adj./@怀疑的;
+synonymous ,/adj./@同義的;,/adj./@同義詞的;
 systematic ,/adj./@系統的;,/adj./@有組織的;
 technology ,/n./@技术;
 television ,/n./@电视;
