--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -153,6 +153,7 @@ feasibility ,/n./@可行性;
 fingerprint ,/n./@指纹;
 flabbergast ,/v./@啞然失色;,/v./@大吃一驚;
 flexibility ,/n./@灵活性;
+fluctuation ,/n./@波動;,/n./@變動;,/n./@動搖;
 foolishness ,/n./@愚蠢;
 forethought ,/n./@先見;,/n./@預謀;
 fortunately ,/adv./@幸運地;,/adv./@幸而;
@@ -235,7 +236,7 @@ masterpiece ,/n./@杰作;
 mathematics ,/n./@数学;
 meaningless ,/adj./@无意义的;
 measurement ,/n./@测量;,/n./@度量;
-merchandise ,/n./@商品;,/n./@貨物;
+merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
 metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
 mindfulness ,/n./@留心;,/n./@察覺;
