--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -242,7 +242,7 @@ pew ,/n./@教堂长椅;,/n./@教堂包厢;
 pie ,/n./@餡餅;,/n./@派;
 pig ,/n./@豬;
 pin ,/n./@別針;
-pit ,/n./@坑;,/n./@窪;,/n./@煤礦;,/n./@桃核;
+pit ,/n./@坑;,/n./@窪坑;,/n./@煤礦;,/n./@果核;,/n./@礦坑;,/n./@陷阱;,/n./@礦井;,/n./@凹處;,/n./@地窖;,/n./@窩;,/n./@麻子;
 ply ,/v./@使用;,/v./@辛勤工作;,/v./@定期來往;,/n./@厚度;
 pod ,/n./@豆莢;,/v./@結豆莢;
 poo ,/n./@大便;,/n./@便便;
