--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -99,6 +99,7 @@ bulb ,/n./@球形物;,/n./@燈泡;
 bulk ,/n./@大半;,/n./@體積;
 bull ,/n./@公牛;
 bump ,/v./@撞;,/v./@碰;,/adj./@突然的;,/adv./@突然地;,/n./@腫塊;
+bunk ,/n./@床舖;,/n./@舖位;,/n./@架式床舖;
 buoy ,/v./@浮;
 burn ,/v./@燃燒;
 bury ,/v./@埋葬;
@@ -445,6 +446,7 @@ hook ,/n./@鉤子;
 hoop ,/n./@箍;,/n./@鐵環;
 hoot ,/n./@鸣叫声;,/n./@嘲笑;,/n./@大笑;,/n./@滑稽可笑的人;,/vi./@鸣叫;,/vi./@鸣响;,/vi./@嘲笑;
 hope ,/v./@希望;
+hose ,/n./@軟管;,/n./@水龍帶;,/n./@長統襪;,/n./@短統襪;
 host ,/n./@主人;
 hour ,/n./@小時;
 howl ,/v./@嚎叫;,/v./@嚎哭;,/n./@嚎叫;,/n./@嚎哭;
@@ -776,6 +778,7 @@ rape ,/v./@強奸;
 rare ,/adj./@稀有的;
 rash ,/adj./@輕率的;,/adj./@魯莽的;
 rate ,/n./@速度;,/n./@比率;,/n./@價格;,/n./@等級/v./@評價;
+raze ,/vt./@夷平;,/vt./@拆毀;
 read ,/v./@讀;
 real ,/adj./@眞實的;
 reap ,/v./@收割;
@@ -833,7 +836,7 @@ save ,/v./@節省;,/v./@保存;,/v./@挽救;
 scan ,/v./@掃描;
 scar ,/n./@傷痕;
 seal ,/v./@封;,/n./@海豹;
-seam ,/v./@縫合;,/v./@裂開;,/n./@縫;
+seam ,/v./@縫合;,/v./@裂開;,/n./@縫;,/n./@缝隙;,/n./@礦層;,/n./@地層;
 seed ,/n./@種子;
 seek ,/v./@尋覓;
 seem ,/v./@好像;
@@ -1026,6 +1029,7 @@ veil ,/n./@面紗;,/n./@面罩;,/v./@遮蔽;,/v./@掩飾;
 vend ,/v./@出售;,/v./@售賣;
 verb ,/n./@動詞;
 very ,/adv./@非常;
+vest ,/n./@背心;,/n./@馬甲;,/n./@汗衫;,/vt./@裝束;,/vt./@授予;
 veto ,/n./@否決;
 vibe ,/n./@氛围;,/n./@感觉;
 vice ,/n./@惡習;,/n./@缺點;,/adj./@副的;
