--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -95,6 +95,7 @@ avoid ,/v./@躲避;
 awake ,/adj./@清醒;
 award ,/n./@獎品;,/vt./@獎勵;
 aware ,/v./@知道;
+awash ,/adj./@被水覆蓋的;,/adj./@被浪潮沖打的;,/adj./@被海水沖刷的;
 awful ,/adj./@可怕的;,/adj./@可觀的;
 axial ,/adj./@軸的;,/adj./@軸向的;
 azure ,/adj./@蔚蓝的;,/adj./@碧蓝的;
@@ -152,7 +153,7 @@ booze ,/n./@酒宴;,/v./@豪飲;
 bored ,/adj./@無聊的;
 bosom ,/n./@胸;
 bound ,/vt./@束縛;,/n./@跳躍;,/n./@界限;
-bowel ,/n./@腸;
+bowel ,/n./@腸;,/n./@內部;,/n./@深處;
 brace ,/n./@大括號;,/n./@支架;,/n./@牙箍;,/n./@梏具;,/vi./@俯身抱头;,/vt./@加固;,/vt./@顶住;
 brain ,/n./@頭腦;
 brake ,/n./@刹车;,/n./@制动;,/vi./@刹车;
@@ -271,6 +272,7 @@ crack ,/n./@裂縫;,/v./@破裂;,/vi./@爆裂;
 craft ,/n./@工藝;,/n./@手藝;
 cramp ,/v./@痙攣;
 crane ,/v./@伸長;
+crank ,/n./@曲柄;,/n./@怪人;,/vi./@轉動曲柄;,/vt./@用曲柄轉動;
 crash ,/v./@碰撞;,/v./@墜毀;
 crate ,/n./@筐;,/n./@簍;,/n./@箱;,/n./@分隔箱;
 crave ,/v./@渴望;,/v./@懇求;
@@ -633,6 +635,7 @@ lilac ,/n./@丁香;,/adj./@淡紫色的;
 limbo ,/n./@地獄的邊境;
 limit ,/n./@限制;,/v./@限制;
 linen ,/n./@亞麻;,/adj./@亞麻的;
+liner ,/n./@班輪;,/n./@班機;,/n./@襯裡;,/n./@襯墊;
 lingo ,/n./@行話;
 links ,/v./@鏈接;
 litre ,/n./@升;
@@ -988,6 +991,7 @@ skate ,/n./@冰鞋;,/v./@滑冰;
 skill ,/n./@技巧;
 skirt ,/n./@裙子;
 skull ,/n./@顱骨;
+slack ,/adj./@鬆弛的;,/adj./@懈怠的;,/adj./@懶散的;,/adj./@蕭條的;,/adj./@遲緩的;,/adj./@呆滯的;,/adj./@平緩的;
 slain ,/v./@殺害@<slay的過去式>;
 slang ,/n./@俚語;,/vt./@谩骂;
 slant ,/v./@傾斜;,/n./@傾斜;
@@ -1065,7 +1069,7 @@ stack ,/n./@堆;
 staff ,/n./@員工;
 stage ,/n./@舞臺;,/n./@階段;
 stain ,/n./@汙點;
-stake ,/n./@柱;,/n./@賭註;,/n./@樁;
+stake ,/n./@柱;,/n./@賭註;,/n./@樁;,/n./@火刑柱;,/n./@利害關係;,/n./@風險;
 stale ,/adj./@陳舊的;
 stall ,/v./@拖延;,/n./@貨攤;,/n./@畜欄;,/n./@馬廄;,/n./@小隔间;,/n./@失速;,/n./@熄火;,/n./@车位;,/v./@熄火;,/v./@失速;
 stamp ,/n./@郵票;
@@ -1080,7 +1084,7 @@ steep ,/adj./@陡峭的;,/adv./@急劇的;,/v./@浸泡;
 steer ,/v./@駕駛;,/v./@操舵;
 stern ,/n./@船尾;,/adj./@嚴厲的;,/adj./@堅決的;
 stick ,/v./@粘貼;,/n./@枝;,/v./@紥;
-stiff ,/adj./@拘謹的;,/adj./@僵硬的;
+stiff ,/adj./@拘謹的;,/adj./@僵硬的;,/adj./@剛強的;,/adj./@強烈的;,/adj./@生硬的;,/adj./@艱難的;,/adj./@拉緊的;
 still ,/adv./@一直;,/adv./@仍然;
 sting ,/v./@刺;,/v./@蟄;
 stock ,/n./@儲備;,/n./@股票;
@@ -1202,7 +1206,7 @@ troop ,/n./@軍隊;
 trout ,/n./@鱒魚;,/n./@鮭魚;,/n./@鱒魚肉;,/n./@鮭魚肉;,/n./@老傢伙;
 truck ,/n./@卡車;
 trump ,/n./@王牌;
-trunk ,/n./@樹幹;
+trunk ,/n./@樹幹;,/n./@行李箱;,/n./@象鼻;,/n./@軀幹;,/n./@大箱子;
 trust ,/v./@相信;
 truth ,/n./@眞理;,/n./@事實;
 tryst ,/n./@幽會;,/n./@約會;
