--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -15,6 +15,7 @@ access ,/v./@使用;,/v./@接近;,/v./@進入;
 accord ,/v./@符合;,/v./@一致;,/v./@根据;,/n./@协议;
 accrue ,/v./@产生;,/v./@发生;
 accuse ,/v./@控告;
+acquit ,/vt./@宣告無罪;,/vt./@免罪;,/vt./@免責;,/vt./@清償;
 action ,/n./@行動;,/n./@行爲;
 active ,/adj./@積極的;,/adj./@活躍的;
 actual ,/adj./@眞實的;
@@ -22,6 +23,7 @@ addict ,/v./@沉溺;
 adhere ,/v./@依附;,/v./@粘附;,/vi./@遵守;,/vi./@堅持;
 adjust ,/v./@調整;
 admire ,/v./@欽佩;,/v./@仰慕;
+adrift ,/adj./@漂浮著的;,/adj./@漂流著的;,/adv./@漂浮著;,/adv./@漂流著;
 adverb ,/n./@副詞;
 advert ,/v./@引起註意;
 advice ,/n./@建議;
@@ -94,6 +96,7 @@ assist ,/v./@協助;
 assize ,/n./@巡回审判;
 assume ,/v./@猜想;
 assure ,/v./(使)@確信;
+astern ,/adv./@向船尾;,/adv./@在船尾;,/adv./@向後;,/adv./@在後面;
 astray ,/adj./@迷失的;,/adj./@误入歧途的;,/adv./@迷路地;,/adv./@误入歧途地;,/adv./@遗失;
 astute ,/adj./@機敏的;,/adj./@精明的;
 asylum ,/n./@庇護;
@@ -123,7 +126,7 @@ banana ,/n./@香蕉;
 bandit ,/n./@盜賊;,/n./@强盜;,/n./@土匪;,/n./@匪徒;,/n./@盜匪;
 banish ,/v./@放逐;,/v./@驅逐;
 banner ,/n./@旗幟;,/n./@橫幅;,/n./@標語;
-banter ,/v./@戲虐;
+banter ,/v./@戲虐;,/n./@打趣;,/vi./@談笑;,/vt./@取笑;
 barley ,/n./@大麥;
 barrel ,/n./@桶;,/n./@管;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
@@ -161,6 +164,7 @@ bleach ,/v./@漂白;
 blight ,/n./@枯萎病;,/n./@荒蕪;,/n./@毀壞;,/n./@破壞;
 blonde ,/adj./@金髮碧眼的;,/adj./@白膚金髮碧眼的;,/n./@金髮碧眼的女人;
 blurry ,/adj./@模糊的;,/adj./@不清楚的;,/adj./@污髒的;
+boiler ,/n./@鍋爐;,/n./@汽鍋;,/n./@蒸汽鍋;,/n./@燒水壺;,/n./@燒水鍋;
 borage ,/n./@紫草科;,/adj./@紫草科的;
 border ,/n./@邊界;
 boring ,/adj./@無聊的;
@@ -230,6 +234,7 @@ casual ,/adj./@隨便的;,/adj./@偶然的;,/adj./@随意的;,/adj./@粗略的;,
 cattle ,/n./@牛;
 caveat ,/n./@警告;,/n./@告誡;
 cavern ,/n./@洞穴;,/v./@挖空;
+caviar ,/n./@魚子醬;
 cavity ,/n./@洞穴;,/n./@腔;,/n./@龋洞;,/n./@孔;
 celery ,/n./@芹菜;
 cement ,/n./@水泥;
@@ -362,6 +367,7 @@ defile ,/v./@污損;,/v./@弄髒;,/v./@污染;
 define ,/v./@定義;
 deform ,/v./@弄變形；@弄殘;
 degree ,/n./@度;,/n./@學位;,/n./@級別;
+deject ,/vt./@使沮喪;,/vt./@使消沉;
 delete ,/v./@刪除;
 deluge ,/n./@洪水;,/n./@汎濫;,/n./@暴雨;
 demand ,/v./@命令;
@@ -468,7 +474,7 @@ equine ,/adj./@马的;
 equity ,/n./@公平;
 eraser ,/n./@橡皮;,/n./@清除器;,/n./@擦除器;
 erotic ,/adj./@色情的;,/adj./@性愛的;
-errand ,/n./@使命;,/n./差事;
+errand ,/n./@使命;,/n./差事;,/n./@差使;,/n./@任務;
 errant ,/adj./@不定的;
 escape ,/v./@逃脫;
 escort ,/v./@護送;,/v./@陪同;,/n./@護航艦;
@@ -653,6 +659,7 @@ horror ,/n./@驚駭;,/n./@恐怖;
 hostel ,/n./@招待所;
 hotdog ,/n./@熱狗;
 hubble ,/n./@小瘤;,/n./@小凸起;
+hubris ,/n./@傲慢;,/n./@驕傲;
 huddle ,/v./@蜷縮;
 humane ,/adj./@仁慈的;,/adj./@人道的;,/adj./@髙尚的;
 humble ,/adj./@謙卑的;
@@ -708,7 +715,7 @@ jagger ,/n./@鑿子;,/n./@鋸齒;
 jigsaw ,/n./@線鋸;
 jocund ,/adj./@歡樂的;,/adj./@高興的;,/adj./@快活的;
 jostle ,/v./@推擠;
-jovial ,/adj./@快活的;
+jovial ,/adj./@快活的;,/adj./@愉快的;,/adj./@快乐的;
 judder ,/v./@顫抖;,/n./@顫抖;
 jungle ,/n./@叢林;,/n./@密林;
 junior ,/adj./@初級的;
@@ -872,7 +879,7 @@ normal ,/adj./@正常的;
 notary ,/n./@公證人;
 notice ,/v./@註意;,/n./@註意;,/n./@通知;
 notify ,/v./@通知;
-notion ,/n./@概念;,/n./@意圖;
+notion ,/n./@概念;,/n./@意圖;,/n./@想法;,/n./@念頭;
 nought ,/n./@零;
 novice ,/n./@新手;,/n./@初学者;
 nuance ,/n./@細微差別;
@@ -1117,6 +1124,7 @@ rotary ,/adj./@旋轉的;
 rotate ,/v./@旋轉;
 rubber ,/n./@橡膠;,/n./@橡皮;
 rubble ,/n./@碎石;,/n./@碎磚;
+rudder ,/n./@舵;
 ruffle ,/v./@弄皺;,/v./@惹怒;,/v./@擾亂;
 rumble ,/n./@隆隆聲;,/v./@隆隆響;
 sacred ,/adj./@神聖的;
@@ -1452,7 +1460,7 @@ visual ,/adj./@視覺的;
 volume ,/n./@容量;,/n./@體積;,/n./@音量;,/n./@卷;,/v./@卷起;
 vortex ,/n./@渦流;,/n./@漩渦;,/n./@中心;,/n./@旋風;
 voyage ,/n./@航行;,/n./@航海;,/n./@航空;
-vulgar ,/adj./@粗俗的;,/n./@平民;
+vulgar ,/adj./@粗俗的;,/n./@平民;,/adj./@粗魯的;,/adj./@通俗的;,/adj./@大眾的;,/adj./@庶民的;,/adj./@下流的;,/adj./@鄉土語的;
 waffle ,/n./@華夫;,/v./@胡扯;,/v./@閒聊;
 waiter ,/n./@侍者;,/n./@服務員;
 wallet ,/n./@錢包;
