--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -12,12 +12,12 @@ accrete ,/v./@逐漸增長;
 acerbic ,/adj./@尖酸的;
 achieve ,/v./@完成;,/v./@實現;
 acquire ,/v./@習得;
-acrobat ,/n./@雜技演員;
+acrobat ,/n./@雜技演員;,/n./@特技演員;
 acronym ,/n./@首字母縮略詞;
 actress ,/n./@女演員;
 adamant ,/adj./@固執的;
 address ,/n./@地址;,/n./@演講;,/n./@致辭;,/v./@從事;
-adjourn ,/v./@延期;
+adjourn ,/v./@延期;,/vt./@中止;,/vt./@休會;,/vt./@休庭;
 adjunct ,/n./@附屬物;
 adulate ,/v./@諂媚;
 advance ,/v./@发展;,/v./@前進;,/v./@提前;
@@ -95,7 +95,7 @@ augment ,/v./@增大;
 auspice ,/n./@贊助;,/n./@主辦;,/n./@吉兆;
 austere ,/adj./@嚴峻的;
 autopsy ,/n./@驗屍;
-avarice ,/n./@貪婪;
+avarice ,/n./@貪婪;,/n./@貪慾;
 average ,/adj./@平均的;
 aviator ,/n./@飛行員;
 avidity ,/n./@狂熱;
@@ -524,7 +524,7 @@ forsake ,/v./@拋棄;,/v./@遺棄;
 fortify ,/v./@加强;,/v./@增强;
 fortune ,/n./@命運;,/n./@運氣;,/n./@財產;
 forward ,/adv./@向前;
-founder ,/n./@創辦人;,/n./@奠基人;
+founder ,/n./@創辦人;,/n./@奠基人;,/vi./@沉沒;,/vi./@失敗;
 fragile ,/adj./@易碎的;,/adj./@脆的;
 frailty ,/n./@虛弱;
 freedom ,/n./@自由;
@@ -537,6 +537,7 @@ funeral ,/n./@葬禮;
 funfair ,/n./@遊樂場;
 furbish ,/v./@磨光;,/v./@恢復;,/v./@更新;
 furious ,/adj./@狂怒的;
+furnish ,/vt./@配置;,/vt./@裝備;,/vt./@供應;,/vt./@提供;
 further ,/v./@促進;,/adv./@進一步;,/adj./@更遠的;
 furtive ,/adj./@鬼鬼祟祟的;
 gallant ,/adj./@勇敢的;
@@ -557,6 +558,7 @@ gentile ,/n./@異教徒;
 genuine ,/adj./@眞實的;
 germane ,/adj./@適用的;
 gesture ,/n./@手勢;
+ghastly ,/adj./@可怕的;,/adj./@恐怖的;
 giraffe ,/n./@長頸鹿;
 gladius ,/n./@短劍;
 glamour ,/n./@魅力;,/n./@迷惑;
@@ -700,6 +702,7 @@ literal ,/adj./@文字的;,/adj./@無誇張的;
 lobster ,/n./@龍蝦;
 lockout ,/n./@封鎖;,/n./@停工;
 logical ,/v./@邏輯的;
+lookout ,/n./@守望;,/n./@警戒;,/n./@監視;,/n./@瞭望所;,/n./@守望者;
 lottery ,/n./@彩票;,/n./@抽彩;,/n./@抓阄;
 lowborn ,/adj./@出身微賤的;
 loyalty ,/n./@忠誠;
@@ -794,7 +797,7 @@ offence ,/n./@冒犯;,/n./@攻擊;
 offense ,/n./@冒犯;,/n./@進攻;
 officer ,/n./@官員;
 offside ,/n./@越位;
-ominous ,/adj./@不祥的;
+ominous ,/adj./@不祥的;,/adj./@不吉的;,/adj./@預兆的;,/adj./@預示的;
 onerous ,/adj./@繁重的;,/adj./@麻煩的;,/adj./@負有義務的;
 ongoing ,/adj./@正在進行的;
 opacity ,/n./@不透明;,/n./@不傳導;
@@ -927,7 +930,7 @@ procure ,/v./@取得;,/v./@獲得;,/v./@導致;
 prodigy ,/n./@奇蹟;
 produce ,/v./@生產;
 product ,/n./@產品;
-profane ,/adj./@褻瀆的;,/n./@褻瀆;
+profane ,/adj./@褻瀆的;,/vt./@褻瀆;,/adj./@世俗的;
 profess ,/v./@表白;
 proffer ,/n./@提供;,/v./@提供;
 profile ,/n./@簡介;,/n./@側面;,/n./@輪廓;
@@ -1147,6 +1150,7 @@ succeed ,/v./@成功;
 success ,/n./@成功;
 succumb ,/vi./@屈服;
 sucrose ,/n./@蔗糖;
+suction ,/n./@吸入;,/n./@吸引;,/n./@吸;,/n./@吸力;
 suffice ,/v./@足夠;,/v./@滿足;
 suggest ,/v./@建議;
 suicide ,/v./@自殺;
@@ -1156,6 +1160,7 @@ suppose ,/v./@假設;
 supreme ,/adj./@至髙的;
 surface ,/n./@表面;
 surgeon ,/n./@外科醫生;
+surmise ,/vt./@推測;,/vt./@猜測;,/vt./@臆測;
 surname ,/n./@名字;
 surpass ,/v./@超過;,/v./@優于;,/v./@多于;
 surplus ,/v./@剩余;,/v./@盈余;
@@ -1302,6 +1307,7 @@ whether ,/conj./@是否;
 whimper ,/v./@嗚咽;,/n./@嗚咽;
 whistle ,/v./@吹哨;,/v./@鳴笛;,/v./@嘯叫;
 whoever ,/pron./@無論誰;
+whopper ,/n./@龐然大物;,/n./@彌天大謊;
 widower ,/n./@鰥夫;
 willing ,/adj./@樂意的;
 wiretap ,/v./@竊聽;,/n./@竊聽;
