--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -37,7 +37,7 @@ airdrome ,/n./@飛機場;
 airstrip ,/n./@飛機跑道;
 airtight ,/adj./@无懈可击的;
 alacrity ,/n./@樂意;,/n./@欣然;
-allegory ,/n./@寓言;
+allegory ,/n./@寓言;,/n./@諷喻;
 allergic ,/adj./@过敏性的;
 Alliance ,/n./@联盟;
 allocate ,/v./@分配;
@@ -245,6 +245,7 @@ cosmical ,/adj./@宇宙的;,/adj./@廣大無邊的;
 couldn't ,/v./@不能;
 courtesy ,/n./@礼貌;
 coverage ,/n./@覆盖@范围;,/n./@新闻报道;
+coziness ,/n./@舒適;,/n./@安逸;,/n./@愜意;
 creation ,/n./@創造;
 creative ,/adj./@创造性的;
 creature ,/n./@生物;
@@ -348,6 +349,7 @@ doughnut ,/n./@甜甜圈;
 dovetail ,/vi./@吻合;,/vt./使@吻合;
 download ,/v./@下载;
 downward ,/adj./@向下的;,/adv./@向下;
+dreadful ,/adj./@可怕的;,/adj./@令人恐懼的;,/adj./@糟透的;
 dumpling ,/n./@餃子;,/n./@湯糰;,/n./@麵糰;
 duration ,/n./@持续;
 dynamite ,/n./@炸药;
@@ -390,7 +392,7 @@ envelope ,/n./@信封;
 enviable ,/adj./@值得羡慕的;
 envision ,/vt./@想象;
 epidemic ,/adj./@流行的;,/adj./@傳染性的;,/n./@傳染病;,/n./@流行病;
-epilogue ,/n./@尾聲;,/n./@結局;
+epilogue ,/n./@尾聲;,/n./@結局;,/n./@後記;,/n./@收場白;
 epiphany ,/n./@頓悟;,/n./@顯現;,/n./@主顯節;
 equality ,/n./@相等;
 equation ,/n./@等式;,/n./@方程式;
@@ -590,6 +592,7 @@ juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
 laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;
+landfill ,/n./@垃圾填埋;,/n./@垃圾填埋地;
 landmine ,/n./@地雷;
 language ,/n./@语言;
 languish ,/vi./@憔悴;,/vi./@凋萎;,/vi./@蕭條;,/vi./@苦思;
@@ -698,7 +701,7 @@ notation ,/n./@符号;,/n./@记号法;,/n./@注释;,/n./@乐谱;
 notebook ,/n./@笔记本;
 November ,/n./@十一月;
 nowadays ,/adv./@如今;,/adv./@目前;
-nuisance ,/n./@讨厌的东西;
+nuisance ,/n./@讨厌的东西;,/n./@麻煩事;,/n./@妨害行為;
 numerous ,/adj./@大量的;
 nutrient ,/n./@營養物;,/n./@營養成分;,/adj./@營養的;
 obedient ,/adj./@服從的;,/adj./@順從的;,/adj./@聽話的;
@@ -903,6 +906,7 @@ Saturday ,/n./@星期六;
 scaffold ,/n./@脚手架;,/n./@绞刑台;
 scarcely ,/adv./@仅仅;
 scarcity ,/n./@不足;
+scathing ,/adj./@尖刻的;,/adj./@苛刻的;,/adj./@嚴厲的;,/adj./@傷害的;,/adj./@損傷的;
 scenario ,/n./@方案;,/n./@情节;,/n./@剧本;
 schedule ,/n./@日程;,/n./@安排;
 scissors ,/n./@剪刀;
@@ -955,14 +959,14 @@ solution ,/n./@解决;
 somebody ,/pron./@有人;,/pron./@某人;
 somewhat ,/adv./@几分;,/adv./@有点;,/adv./@稍微;
 soothing ,/adj./@抚慰的;
-sorority ,/n./@妇女联谊会;
+sorority ,/n./@妇女联谊会;,/n./@女生聯誼會;
 spacious ,/adj./@宽敞的;
 specific ,/adj./@特殊的;,/adj./@明确的;
 spectrum ,/n./@光谱;,/n./@频谱;,/n./@范围;,/n./@余象;
 spiteful ,/adj./@懷恨的;,/adj./@惡意的;
 splatter ,/vt./@泼溅;,/vi./@啪嗒作响;,/n./@啪嗒声;
 splendid ,/adj./@壮丽的;
-splendor ,/n./@光彩;,/n./@壯麗;
+splendor ,/n./@光彩;,/n./@壯麗;,/n./@壯觀;,/n./@光輝;,/n./@輝煌;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
@@ -974,6 +978,7 @@ standoff ,/n./@僵持;,/n./@均衡;,/n./@僵局;
 starfish ,/n./@海星;
 starving ,/adj./@饥饿的;
 stealthy ,/adj./@秘密的;,/adj./@偷偷摸摸的;,/adj./@鬼鬼祟祟的;
+steerage ,/n./@统舱;,/n./@舵效;,/n./@指導;,/n./@指引;
 stickler ,/n./@頑固的人;,/n./@堅持的人;
 stimulus ,/n./@刺激;,/n./@刺激物;,/n./@激勵;
 straight ,/adj./@直的;,/adj./@直接的;
@@ -987,6 +992,7 @@ struggle ,/v.//n./@奋斗;,/v.//n./@努力;,/v.//n./@斗争;
 stubborn ,/adj./@愚笨的;
 stuffing ,/n./@填料;
 stunning ,/adj./@极好的;,/adj./@令人震惊的;
+submerge ,/vt./@淹沒;,/vt./@湮沒;,/vt./@掩蓋;,/vt./@覆蓋;
 subpoena ,/n./@传票;,/v./@传讯;,/v./@传唤;
 subtitle ,/n./@副標題;,/n./@字幕;
 subtlety ,/n./@微妙;
