--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -406,7 +406,9 @@ framework ,/n./@框架;,/n./@体系;
 franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;
 fraternal ,/adj./@兄弟般的;,/adj./@兄弟的;
 freelance ,/n./@自由作家;,/n./@自由记者;
+freighter ,/n./@貨輪;,/n./@運輸機;,/n./@承運人;,/n./@發貨人;
 frequency ,/n./@频率;
+frivolous ,/adj./@輕浮的;,/adj./@輕佻的;,/adj./@無聊的;,/adj./@瑣碎的;
 fruitless ,/adj./@徒劳的;
 frustrate ,/v./@打击;,/v./使@沮丧;,/v./使@受挫;
 fundament ,/n./@基礎;,/n./@臀部;,/n./@肛門;
@@ -535,6 +537,7 @@ longevity ,/n./@長壽;
 longitude ,/n./@经度;
 lubricant ,/n./@潤滑劑;,/adj./@潤滑的;
 lubricate ,/v./@潤滑;
+luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
 machinery ,/n./@机械;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
 malicious ,/adj./@惡意的;
@@ -832,6 +835,7 @@ subsidize ,/vt./@补贴;,/vt./@资助;
 substance ,/n./@物质;
 succulent ,/adj./@多汁的;
 suffocate ,/v./@窒息;,/v./@受阻;
+sumptuous ,/adj./@奢侈的;,/adj./@豪華的;,/adj./@奢華的;
 sunflower ,/n./@向日葵;
 supersede ,/v./@取代;,/v./@推遲;,/v./@代替;
 supervise ,/v./@监督;,/v./@管理;
