--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -339,6 +339,7 @@ incurrence
 indefinite
 indelicate
 indication
+indictment
 individual
 inducement
 industrial
@@ -400,6 +401,7 @@ mechanical
 meditation
 melancholy
 membership
+mercantile
 metallurgy
 methodical
 microscope
@@ -443,6 +445,7 @@ pagination
 parametric
 paranormal
 paraphrase
+Parisienne
 participle
 particular
 passionate
@@ -470,6 +473,7 @@ playwright
 polychrome
 population
 possession
+precaution
 precedence
 prediction
 preferable
@@ -581,6 +585,7 @@ supersonic
 supplement
 supplicate
 suspicious
+synonymous
 systematic
 technology
 television
