--- a/Files/lang/en/english4.csv
+++ b/Files/lang/en/english4.csv
@@ -99,6 +99,7 @@ bulb
 bulk
 bull
 bump
+bunk
 buoy
 burn
 bury
@@ -445,6 +446,7 @@ hook
 hoop
 hoot
 hope
+hose
 host
 hour
 howl
@@ -776,6 +778,7 @@ rape
 rare
 rash
 rate
+raze
 read
 real
 reap
@@ -1026,6 +1029,7 @@ veil
 vend
 verb
 very
+vest
 veto
 vibe
 vice
