--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -95,6 +95,7 @@ avoid
 awake
 award
 aware
+awash
 awful
 axial
 azure
@@ -271,6 +272,7 @@ crack
 craft
 cramp
 crane
+crank
 crash
 crate
 crave
@@ -633,6 +635,7 @@ lilac
 limbo
 limit
 linen
+liner
 lingo
 links
 litre
@@ -988,6 +991,7 @@ skate
 skill
 skirt
 skull
+slack
 slain
 slang
 slant
