--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -15,6 +15,7 @@ access
 accord
 accrue
 accuse
+acquit
 action
 active
 actual
@@ -22,6 +23,7 @@ addict
 adhere
 adjust
 admire
+adrift
 adverb
 advert
 advice
@@ -94,6 +96,7 @@ assist
 assize
 assume
 assure
+astern
 astray
 astute
 asylum
@@ -161,6 +164,7 @@ bleach
 blight
 blonde
 blurry
+boiler
 borage
 border
 boring
@@ -230,6 +234,7 @@ casual
 cattle
 caveat
 cavern
+caviar
 cavity
 celery
 cement
@@ -362,6 +367,7 @@ defile
 define
 deform
 degree
+deject
 delete
 deluge
 demand
@@ -653,6 +659,7 @@ horror
 hostel
 hotdog
 hubble
+hubris
 huddle
 humane
 humble
@@ -1117,6 +1124,7 @@ rotary
 rotate
 rubber
 rubble
+rudder
 ruffle
 rumble
 sacred
