--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -537,6 +537,7 @@ funeral
 funfair
 furbish
 furious
+furnish
 further
 furtive
 gallant
@@ -557,6 +558,7 @@ gentile
 genuine
 germane
 gesture
+ghastly
 giraffe
 gladius
 glamour
@@ -700,6 +702,7 @@ literal
 lobster
 lockout
 logical
+lookout
 lottery
 lowborn
 loyalty
@@ -1147,6 +1150,7 @@ succeed
 success
 succumb
 sucrose
+suction
 suffice
 suggest
 suicide
@@ -1156,6 +1160,7 @@ suppose
 supreme
 surface
 surgeon
+surmise
 surname
 surpass
 surplus
@@ -1302,6 +1307,7 @@ whether
 whimper
 whistle
 whoever
+whopper
 widower
 willing
 wiretap
