--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -245,6 +245,7 @@ cosmical
 couldn't
 courtesy
 coverage
+coziness
 creation
 creative
 creature
@@ -348,6 +349,7 @@ doughnut
 dovetail
 download
 downward
+dreadful
 dumpling
 duration
 dynamite
@@ -590,6 +592,7 @@ juvenile
 kangaroo
 keyboard
 laminate
+landfill
 landmine
 language
 languish
@@ -903,6 +906,7 @@ Saturday
 scaffold
 scarcely
 scarcity
+scathing
 scenario
 schedule
 scissors
@@ -974,6 +978,7 @@ standoff
 starfish
 starving
 stealthy
+steerage
 stickler
 stimulus
 straight
@@ -987,6 +992,7 @@ struggle
 stubborn
 stuffing
 stunning
+submerge
 subpoena
 subtitle
 subtlety
