--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -406,7 +406,9 @@ framework
 franchise
 fraternal
 freelance
+freighter
 frequency
+frivolous
 fruitless
 frustrate
 fundament
@@ -535,6 +537,7 @@ longevity
 longitude
 lubricant
 lubricate
+luxurious
 machinery
 magnitude
 malicious
@@ -832,6 +835,7 @@ subsidize
 substance
 succulent
 suffocate
+sumptuous
 sunflower
 supersede
 supervise
