--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -171,7 +171,7 @@ contiguous ,/adj./@連續的;,/adj./@鄰近的;
 contingent ,/adj./@偶然的;,/adj./@或有的;,/n./@分遣隊;
 continuity ,/n./@连续性;,/n./@連貫性;,/n./@持續性;,/n./@銜接;,/n./@節目串聯;,/n./@場景串聯;
 continuous ,/adj./@连续不断的;
-contraband ,/adj./@走私;,/n./@走私;
+contraband ,/n./@走私;,/adj./@走私的;,/adj./@禁運的;,/n./@走私貨品;,/n./@違禁品;,/adj./@違禁的;
 contradict ,/v./@反駁;,/v./@矛盾;
 contravene ,/vt./@違反;,/vt./@違犯;,/vt./@侵犯;,/vt./@抵触;
 contribute ,/v./@貢獻;,/v./@捐獻;,/v./@投@稿;
@@ -256,6 +256,7 @@ enticement ,/n./@诱惑;,/n./@怂恿;,/n./@诱饵;
 entrancing ,/adj./@吸引人的;
 equivalent ,/adj./@等价的;
 equivocate ,/v./@模棱兩可;,/v./@支吾其詞;,/v./@含糊其辭;
+escalation ,/n./@增强;,/n./@加剧;,/n./@扩大;,/n./@恶化;,/n./@逐步上升;,/n./@逐步擴大;
 especially ,/adv./@尤其;
 evaluation ,/n./@评价;,/n./@评估;
 evangelist ,/n./@福音傳道者;
@@ -473,6 +474,7 @@ playwright ,/n./@剧作家;
 polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
 possession ,/n./@資產;,/n./@所有;
+precarious ,/adj./@不穩的;,/adj./@危險的;,/adj./@說不定的;
 precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
 prediction ,/n./@预言;
@@ -506,6 +508,7 @@ recreation ,/n./@娱乐;
 recurrence ,/n./@復發;
 referendum ,/n./@公投;,/n./@全民投票;
 reflection ,/n./@反应;,/n./@反射;
+refraction ,/n./@折射;
 regularity ,/n./@规则性;,/n./@整齐;
 regulation ,/n./@規則;,/n./@法令;,/n./@管理;
 regulatory ,/adj./@管理的;
@@ -556,6 +559,7 @@ similarity ,/n./@類似;
 simplicity ,/n./@簡單;,/n./@簡樸;,/n./@單純;
 smartphone ,/n./@智能手机;
 smithereen ,/v./@击碎;
+smokestack ,/n./@煙囪;
 solidarity ,/n./@團結;
 specialist ,/n./@專家;
 specialize ,/v./@专攻;
