--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -43,6 +43,7 @@ charismatic ,/adj./@吸引人的;,/adj./@蒙受神恩的;,/adj./@有魅力的;
 chlorophyll ,/n./@葉綠素;
 chloroplast ,/n./@葉綠體;
 cholesterol ,/n./@胆固醇;
+clairvoyant ,/n./@先知;,/adj./@洞悉未来的;
 clandestine ,/adj./@隱藏的;,/adj./@秘密的;
 coincidence ,/n./@巧合;
 collaborate ,/v./@合作;,/v./@勾结;,/v./@通敌;
@@ -173,6 +174,7 @@ headquarter ,/n./@總部;,/n./@司令部;
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
+hypothermic ,/adj./@体温过低的;
 hypothesize ,/v./@假设;
 illuminatus ,/n./@光照派教徒;
 imagination ,/n./@想象;,/n./@想象力;
@@ -244,7 +246,7 @@ multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
 Neitherland ,/n./@荷兰;,/n./@尼德兰;
 nonchalance ,/n./@冷淡;
-nondescript ,/adj./@無以名狀的;
+nondescript ,/adj./@無以名狀的;,/adj./@難以歸類的;,/adj./@難以形容的;
 nonsensical ,/adj./@无意义的;,/adj./@荒谬的;
 notoriously ,/adv./@眾所周知地;
 observation ,/n./@观察;,/n./@监视;
