--- a/Files/lang/ch/chinese14.csv
+++ b/Files/lang/ch/chinese14.csv
@@ -25,6 +25,7 @@ representation ,/n./@代表;
 representative ,/n./@代表;
 representitive ,/n./@代表;
 responsibility ,/n./@责任;
+sensationalism ,/n./@追求轟動效應;,/n./@官能主義;,/n./@追求轟動效應的題材;,/n./@嘩眾取寵;
 simultaneously ,/adv./@同时地;
 sustainability ,/n./@可持續性;,/n./@永續性;
 transcendental ,/adj./@先驗的;,/adj./@卓越的;,/adj./@超自然的;,/adj./@超凡的;,/adj./@超越的;,/adj./@人智所不及的;
