--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -340,6 +340,7 @@ from ,/prep./@從;
 fuck ,/v./@性交;,/v./@做愛;
 fuel ,/n./@燃料;
 full ,/adj./@滿的;
+fume ,/n./@煙;,/n./@煙汽;,/vi./@冒煙;,/vi./@冒出;,/vi./@發怒;,/vt./@薰;,/vt./@冒出;
 fund ,/n./@資金;
 fury ,/n./@暴怒;
 fuse ,/v./@熔化;,/n./@保險絲;,/n./@導火綫;,/v./@融合;
@@ -451,7 +452,7 @@ host ,/n./@主人;
 hour ,/n./@小時;
 howl ,/v./@嚎叫;,/v./@嚎哭;,/n./@嚎叫;,/n./@嚎哭;
 huge ,/adj./@大的;
-hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;
+hull ,/n./@船体;,/n./@殼;,/n./@荚;,/n./@皮;,/n./@蒂;,/n./@花萼;,/n./@船身;,/n./@殼體;
 hunt ,/v./@捕獵;
 hurl ,/v./@猛投;,/v./@猛擲;,/v./@丟下;
 hurt ,/v./@傷害;
@@ -476,7 +477,7 @@ joke ,/n./@笑話;,/v./@開玩笑;
 July ,/n./@七月;
 jump ,/v./@跳;
 June ,/n./@六月;
-junk ,/n./@垃圾;
+junk ,/n./@垃圾;,/n./@平底帆船;,/n./@舢板;
 jury ,/n./@陪審團;
 just ,/adv./@只是;,/adv./@僅僅;,/adj./@公正的;
 keel ,/n./@龍骨;
