--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -5,7 +5,7 @@ abode ,/n./@住所;,/n./@居住;
 abort ,/v./@中斷;,/v./@流產;
 about ,/prep./@關於;,/prep./@大約;
 abuse ,/v./@濫用;,/v./@虐待;,/v./@辱罵;
-abyss ,/n./@深淵;,/n./@無底洞;
+abyss ,/n./@深淵;,/n./@無底洞;,/n./@深坑;,/n./@混沌;
 acrid ,/adj./@辛辣的;
 actor ,/n./@演員;
 acute ,/adj./@尖銳的;,/adj./@精確的;,/adj./@急性的;
@@ -149,7 +149,7 @@ boner ,/n./@大錯;
 bonus ,/n./@獎金;,/n./@紅利;,/n./@津貼;
 boost ,/v./@提髙;
 booth ,/n./@貨攤;,/n./@電話亭;
-booze ,/n./@酒宴;,/v./@豪飲;
+booze ,/n./@酒宴;,/v./@豪飲;,/n./@酒;
 bored ,/adj./@無聊的;
 bosom ,/n./@胸;
 bound ,/vt./@束縛;,/n./@跳躍;,/n./@界限;
@@ -186,6 +186,7 @@ busty ,/adj./@大胸脯的;,/adj./@胸部豐滿的;
 cabin ,/n./@小木屋;,/n./@房舱;,/n./@座舱;
 cable ,/n./@電纜;,/n./@電報;
 cache ,/n./@電腦髙速緩衝存儲器;
+cadet ,/n./@軍校學生;,/n./@候補軍官;,/n./@候補警官;,/n./@見習生;
 camel ,/n./@駱駝;
 canal ,/n./@運河;,/n./@渠道;
 candy ,/n./@糖果;
@@ -348,7 +349,7 @@ dread ,/n./@恐懼;,/n./@懼怕;
 dream ,/n.//v./@夢;
 dress ,/v./@穿著;,/n./@連衣裙;
 drift ,/v./@漂流;,/v./@漂移;,/v./@漂泊;
-drill ,/v./@鑽;
+drill ,/v./@鑽;,/n./@訓練;,/n./@鑽;,/n./@鑽頭;,/vt./@訓練;
 drink ,/v./@喝;,/v./@飲;
 drive ,/v./@駕駛;,/v./@驅動;,/n./@驱动器;,/vt./@操作;,/vi./@开车;,/n./@驱赶;,/vt./@驱赶;,/vt./@迫使;,/n./@车道;,/n./@路;,/n./@抽球;,/n./@活动;,/n./@运动;,/n./@欲望;,/n./@比赛;
 drone ,/n./@無人機;,/n./@雄蜂;
@@ -381,6 +382,7 @@ empty ,/adj./@空的;,/adj./@空白的;
 enemy ,/n./@敵人;
 enjoy ,/v./@享受;,/v./@(使)愉快;
 enrol ,/v./@登記;
+ensue ,/vi./@接著發生;,/vi./@接踵而來;
 enter ,/v./@進入;
 entry ,/n./@進入;,/n./@入口;
 epoch ,/n./@紀元;,/n./@時代;
@@ -433,7 +435,7 @@ firth ,/n./@峽灣;
 flail ,/v./@打;,/v./@用連枷打;
 flame ,/n./@火焰;
 flank ,/n./@側面;
-flare ,/v./@閃耀;,/v./@閃光;,/v./@燃燒;
+flare ,/v./@閃耀;,/v./@閃光;,/v./@燃燒;,/n./@照明彈;,/n./@耀斑;
 flash ,/n.//v./@閃光;,/v./@反射;
 fleet ,/n./@艦隊;,/n./@船隊;
 flesh ,/n./@鮮肉;
@@ -462,7 +464,7 @@ forum ,/n./@論壇;,/n./@討論會;,/n./@法庭;
 found ,/v./@創辦;,/v./@建立;
 foyer ,/n./@門廳;
 frail ,/adj./@脆弱的;
-frame ,/n./@框架;,/n./@結構;,/n./@構造;,/n./@幀;,/v./@設計;,/v./@陷害;
+frame ,/n./@框架;,/n./@結構;,/n./@構造;,/n./@幀;,/v./@設計;,/v./@陷害;,/n./@骨架;
 frank ,/adj./@坦白的;
 fraud ,/n./@欺詐;
 freak ,/n./@怪人;,/adj./@奇怪的;
@@ -557,6 +559,7 @@ hepta ,/pref./@七;
 hight ,/v./@取名;
 hobby ,/n./@業余愛好;
 hoist ,/vt./@舉起;
+hokum ,/n./@噱頭;,/n./@胡言;,/n./@胡扯;
 holly ,/n./@冬青;
 honey ,/n./@蜂蜜;
 honor ,/n./@榮譽;
@@ -608,7 +611,7 @@ labor ,/n./@勞動;
 lager ,/n./@貯藏啤酒;,/n./@窖藏啤酒;
 lance ,/n./@长矛;,/n./@柳叶刀;,/v./@冲进;,/v./@急速前进;
 lapel ,/n./@翻領;
-lapse ,/v./@流逝;
+lapse ,/v./@流逝;,/n./@流逝;,/n./@失誤;,/n./@間隔;
 large ,/adj./@大的;
 lasso ,/n./@套索;,/v./@拉攏;,/v./@套捕;
 latch ,/n./@门闩;,/n./@弹簧锁;
@@ -900,6 +903,7 @@ rinse ,/v./@漂洗;,/v./@沖洗;
 risky ,/adj./@冒險的;,/adj./@有風險的;
 rival ,/n./@競爭;,/n./@對手;
 river ,/n./@河流;
+rivet ,/n./@鉚釘;,/vt./@鉚;,/vt./@鉚接;,/vt./@固定;
 roast ,/v./@烤;,/adj./@烤的;
 robot ,/n./@機器人;
 rogue ,/n./@流氓;
@@ -923,6 +927,7 @@ sauce ,/n./@沙司;,/n./@醬油;,/n./@调味汁;
 savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
 scale ,/n./@魚鱗;,/n./@規模;
 scalp ,/n./@頭皮;
+scape ,/n./@花莖;,/n./@觸角根;,/n./@羽軸;,/n./@柱身;
 scare ,/v./@驚嚇;
 scarf ,/n./@圍巾;
 scary ,/adj./@提心弔膽的;,/adj./@膽小的;
@@ -951,7 +956,7 @@ seven ,/n./@七;
 sever ,/v./@割斷;,/v./@分開;
 shack ,/n./@棚屋;
 shade ,/n./@樹蔭;,/n./@陰影;
-shaft ,/n./@豎井;,/n./@軸桿;,/n./@柄;,/v./@利用;
+shaft ,/n./@豎井;,/n./@軸桿;,/n./@柄;,/v./@利用;,/n./@箭桿;,/n./@通風井;,/n./@升降機井;
 shake ,/v./@搖;,/v./@抖;
 shaky ,/adj./@搖晃的;
 shale ,/n./@頁岩;,/n./@泥板岩;
@@ -1201,6 +1206,7 @@ treat ,/vt./@對待;,/v./@醫治;
 trend ,/n./@趨勢;,/n./@趨向;,/n./@傾向;,/n./@走向;,/vi./@趨向;,/vi./@傾向;
 trial ,/n./@試驗;,/n./@嘗試;
 trick ,/n./@詭計;,/n./@竅門;,/v./@欺詐;,/v./@哄騙;
+trite ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@老生常谈的;
 troll ,/v./@輪唱;,/v./@拖餌釣魚;,/n./@輪唱;,/n./@拖餌釣魚;
 troop ,/n./@軍隊;
 trout ,/n./@鱒魚;,/n./@鮭魚;,/n./@鱒魚肉;,/n./@鮭魚肉;,/n./@老傢伙;
