--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -331,6 +331,7 @@ crises ,/n./@危機;
 crisis ,/n./@危機;
 crotch ,/n./@胯部;,/n./@分叉;
 crouch ,/v./@蹲;,/v./@蜷伏;
+cruise ,/n./@巡航;,/vi./@巡航;,/vt./@巡航於;,/vi./@漫遊;,/vt./@航遊於;
 crunch ,/v./@咬碎;,/v./@壓碎;
 crutch ,/n./@拐杖;,/n./@腋杖;,/n./@支撑物;
 cuboid ,/n./@立方體;
@@ -430,6 +431,7 @@ driver ,/n./@司機;
 duffel ,/n./@起绒粗呢;
 duress ,/v./@強迫;,/v./@監禁;
 during ,/v./@在@(...)期間;
+duster ,/n./@抹布;,/n./@防塵外衣;
 dynamo ,/n./@发电机;
 easier ,/adj./@更容易;
 easily ,/adv./@容易地;
@@ -682,6 +684,7 @@ indeed ,/adv./@當然;,/adv./@確實;
 indent ,/v./@縮行;
 indict ,/v./@起訴;,/v./@控告;,/v./@告發;
 induce ,/v./@引誘;,/v./@引起;
+infamy ,/n./@惡名;,/n./@臭名;,/n./@醜惡;
 infant ,/n./@嬰兒;
 infect ,/v./@感染;,/v./@傳染;
 infill ,/v./@填實;,/v./@填入;
@@ -773,7 +776,7 @@ logout ,/n./@注銷;,/n./@登出;,/n./@退出;
 London ,/n./@倫敦;
 lonely ,/adj./@孤獨的;,/adj./@寂寞的;
 lotion ,/n./@洗液;
-lounge ,/n./@休息室;
+lounge ,/n./@休息室;,/n./@躺椅;
 lovely ,/adj./@可愛的;
 lumber ,/v./@伐木;,/n./@木材;
 lunacy ,/n./@精神失常;,/n./@愚蠢;
@@ -916,7 +919,7 @@ overdo ,/v./@過火;,/v./@誇張;
 pablum ,/n./@嬰兒麥片;
 pacify ,/vt./@使平靜;
 packet ,/n./@小包;,/n./@小盒;
-paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;
+paddle ,/v./@劃槳;,/n./@槳;,/v./@攪;,/vi./@涉水;,/vi./@蹼游;
 palace ,/n./@宮殿;
 palate ,/n./@味覺;
 papist ,/n./@天主教徒;
@@ -1147,7 +1150,7 @@ schema ,/n./@模式;,/n./@计划;,/n./@图解;,/n./@概要;
 scheme ,/n./@方案;,/n./@計劃;
 school ,/n./@學校;
 scorch ,/v./@燒焦;
-scrape ,/v./@刮擦;
+scrape ,/v./@刮擦;,/vt./@擦傷;,/vt./@刮破;
 scrawl ,/v./@塗鴉;,/v./@亂塗;,/v./@亂寫;
 scream ,/v./@尖叫;
 screen ,/n./@屏幕;,/n./@屏;,/v./@篩選;,/v./@甄別;
@@ -1221,7 +1224,7 @@ sludge ,/n./@淤泥;,/n./@烂泥;,/n./@油泥;
 sluice ,/n./@水闸;,/n./@水道;,/n./@冲洗;,/vt./@冲洗;,/vi./@泄出;
 smooch ,/v./@接吻;,/v./@弄髒;
 smooth ,/adj./@光滑的;,/adj./@順利的;
-smudge ,/v./@弄髒;
+smudge ,/v./@弄髒;,/n./@汙點;,/n./@汙跡;
 snatch ,/v./@搶奪;,/v./@奪取;
 sneeze ,/v./@打噴嚏;
 sniper ,/n./@狙擊手;
