--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -46,7 +46,7 @@ America ,/n./@美國;
 amiable ,/adj./@和藹的;,/adj./@亲切的;,/adj./@亲切友好的;
 amnesty ,/n./@大赦;
 amongst ,/prep./@在之中;
-amplify ,/v./@放大;,/v./@详述;
+amplify ,/v./@放大;,/v./@详述;,/vt./@擴大;,/vt./@誇張;,/vt./@增強;
 analogy ,/n./@類比;
 analyse ,/v./@分析;
 analyze ,/v./@分析;
@@ -778,6 +778,7 @@ nostril ,/n./@鼻孔;
 notable ,/adj./@値得註意的;,/n./@名人;
 nothing ,/n./@沒事;
 nourish ,/v./@滋養;
+novella ,/n./@短篇小說;,/n./@中篇小說;
 novelty ,/n./@新奇;
 noxious ,/adj./@有害的;,/adj./@有毒的;
 nuclear ,/adj./@原子核的;,/adj./@核心的;
@@ -1205,6 +1206,7 @@ thunder ,/n./@雷;
 tobacco ,/n./@煙草;
 toddler ,/n./@學步的小孩;,/n./@幼童;
 tonight ,/n./@今晚;,/adv./@今晚;
+tonnage ,/n./@噸位;,/n./@總噸數;
 tornado ,/n./@旋風;,/n./@龍卷風;
 torpedo ,/n./@魚雷;
 torrent ,/n./@奔流;,/n./@連續;
