--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -140,6 +140,7 @@ broccoli ,/n./@花椰菜;,/n./@西蘭花;
 brochure ,/n./@手册;
 brunette ,/n./@浅黑肤色的女人;
 building ,/n./@建筑;
+bulkhead ,/n./@艙壁;,/n./@隔板;,/n./@隔牆;,/n./@堤岸;
 burglary ,/n./@盗窃;
 business ,/n./@事務;,/n./@買賣;,/n./@行業;,/n./@商業;,/n./@商號;
 calamity ,/n./@災難;
@@ -237,7 +238,7 @@ converge ,/vi./@汇聚;,/vi./@相交;
 converse ,/v./@交談;,/v./@交往;,/n./@相反;,/adj./@相反的;,/adj./@顛倒的;,/n./@逆向;
 convince ,/v./@使信服;
 coronary ,/adj./@冠狀動脈的;
-corridor ,/n./@走廊;
+corridor ,/n./@走廊;,/n./@迴廊;,/n./@通道;
 cortical ,/adj./@皮质的;,/adj./@皮层的;
 corvette ,/n./@輕巡洋艦;,/n./@護衛艦;
 cosmetic ,/n./@化妝品;,/n./@裝飾品;,/adj./@美容的;,/adj./@化妝用的;
@@ -386,6 +387,7 @@ engineer ,/n./@工程师;
 enormous ,/adj./@龐大的;,/adj./@巨大的;,/adj./@極大的;
 entangle ,/v./使@纠缠;
 entirely ,/adv./@完全地;
+entirety ,/n./@全部;,/n./@總體;,/n./@全體;,/n./@完整;
 entrance ,/n./@入口;
 entrench ,/v./@確立;,/v./@牢固;,/v./@挖掘;,/v./@用壕溝圍住;
 envelope ,/n./@信封;
@@ -468,7 +470,7 @@ frontier ,/n./@前线;
 fruitful ,/adj./@多产的;,/adj./@富有成效的;
 function ,/n./@作用;,/n./@功能;,/n./@函數;,/v./@运行;
 fuselage ,/n./@機身;
-futility ,/n./@無用;,/n./@徒勞;
+futility ,/n./@無用;,/n./@徒勞;,/n./@無效;,/n./@無益;
 garrison ,/n./@要塞;,/v./@駐防;,/v./@守衛;,/n./@卫戍部队;
 gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
@@ -514,6 +516,7 @@ homeland ,/n./@祖國;,/n./@故鄉;
 homework ,/n./@家庭作业;
 homicide ,/n./@殺人罪;,/n./@殺人;,/n./@殺人犯;
 honorary ,/adj./@榮譽的;
+hooligan ,/n./@小流氓;,/n./@阿飛;,/n./@不良少年;
 hopeless ,/adj./@无望的;
 hornbill ,/n./@犀鸟;
 horrible ,/adj./@可怕的;
@@ -540,6 +543,7 @@ immortal ,/adj./@不死的;,/adj./@永生的;
 immunity ,/n./@免疫力;,/n./@豁免權;
 imperial ,/adj./@帝国的;
 implicit ,/adj./@含蓄的;,/adj./@暗示的;,/adj./@盲從的;
+impurity ,/n./@雜質;,/n./@不純;,/n./@不潔;,/n./@不純之物;
 inactive ,/adj./@不活跃的;,/adj./@不活动的;,/adj./@怠惰的;,/adj./@暂停的;
 incident ,/n./@事件;
 increase ,/v./@增加;
