--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -7,6 +7,7 @@ acceptive ,/adj./@易接纳的;
 accessory ,/n./@配件;,/n./@附件;
 acclimate ,/v./@使適應;
 accompany ,/v./@陪伴;
+accordion ,/n./@手風琴;
 acquiesce ,/v./@默许;,/v./@勉强同意;
 addiction ,/n./@成瘾;
 addictive ,/adj./@上瘾的;
@@ -21,7 +22,7 @@ adventure ,/n./@冒险;
 adversary ,/n./@敵手;
 advertise ,/v./@做广告;
 aeroplane ,/n./@飛機;
-aesthetic ,/adj./@美学的;
+aesthetic ,/adj./@美学的;,/adj./@審美的;
 affiliate ,/v./联号;,/v./使@附属;,/v./@参加;,/n./@附属机构;,/vi./@并入;,/vi./@加入;
 afternoon ,/n./@下午;
 afterward ,/adv./@後來;,/adv./@之後;
@@ -400,7 +401,7 @@ forbidden ,/adj./@被禁止的;
 foreclose ,/v./@沒收;,/v./@阻止;,/v./@排除;
 formality ,/n./@礼节;
 formation ,/n./@形成;,/n./@構造;
-fortitude ,/n./@剛毅;,/n./@堅毅;,/n./@不屈不撓;
+fortitude ,/n./@剛毅;,/n./@堅毅;,/n./@不屈不撓;,/n./@堅忍;
 fortunate ,/adj./@幸運的;
 framework ,/n./@框架;,/n./@体系;
 franchise ,/n./@特權;,/n./@公民權;,/n./@經銷權;
@@ -435,6 +436,7 @@ hibernate ,/vi./@冬眠;
 highlight ,/n./@高亮;,/n./@强调;
 hilarious ,/adj./@歡鬧的;,/adj./@滑稽的;
 hindrance ,/n./@障礙;,/n./@妨礙;,/n./@妨害;
+hindsight ,/n./@事後聰明;,/n./@事後的認識;,/n./@後見之明;
 histogram ,/n./@直方图;,/n./@柱形图;
 homefront ,/n./@國土防線;
 homegrown ,/adj./@本土的;,/adj./@國產的;,/adj./@自家種植的;
@@ -474,7 +476,7 @@ incubator ,/n./@孵育器;
 inculcate ,/v./@灌输;,/v./@塑造;
 incumbent ,/adj./@現任的;,/n./@在職者;
 indelible ,/adj./@不可磨滅的;,/adj./@不可消除的;,/adj./@難忘的;
-indemnity ,/n./@保險補償;
+indemnity ,/n./@保險補償;,/n./@保障;,/n./@保險;,/n./@補償;,/n./@賠償;,/n./@免罰;,/n./@免罪;,/n./@賠款;
 indignant ,/adj./@愤慨的;
 indulgent ,/adj./@放纵的;,/adj./@宽容的;,/adj./@任性的;
 infection ,/n./@感染;,/n./@传染;
@@ -512,6 +514,7 @@ intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
 invention ,/n./@发明;,/n./@创造;
 inventory ,/n./@存货;,/n./@清单;
+inversion ,/n./@倒置;,/n./@倒轉;,/n./@颠倒;,/n./@反向;
 invisible ,/adj./@不可见的;
 irregular ,/adj./@不規則的;
 isolation ,/n./@孤立;,/n./@隔離;
@@ -537,6 +540,7 @@ longevity ,/n./@長壽;
 longitude ,/n./@经度;
 lubricant ,/n./@潤滑劑;,/adj./@潤滑的;
 lubricate ,/v./@潤滑;
+lucrative ,/adj./@賺錢的;,/adj./@有利可圖的;
 luxurious ,/adj./@豪華的;,/adj./@奢侈的;,/adj./@非常舒適的;
 machinery ,/n./@机械;
 magnitude ,/n./@宏大;,/n./@重要;,/n./@量級;,/n./@大小;,/n./@震級;
@@ -579,7 +583,7 @@ newsstand ,/n./@報攤;,/n./@雜誌攤;
 nightmare ,/n./@梦魇;
 normalize ,/v./@正常化;
 nostalgic ,/adj./@懷舊的;
-notorious ,/adj./@聲名狼藉的;
+notorious ,/adj./@聲名狼藉的;,/adj./@臭名昭著的;,/adj./@惡名昭彰的;
 nutrition ,/n./@營養;
 obedience ,/n./@服从;,/n./@順從;
 objection ,/n./@反对;
@@ -769,8 +773,10 @@ salvation ,/n./@拯救;
 sanctuary ,/n./@避難所;,/n./@至聖所;,/n./@神殿;
 sarcastic ,/adj./@挖苦的;,/adj./@讽刺的;
 satisfied ,/adj./@感到滿意的;
+scapegoat ,/n./@替罪羊;,/n./@替罪者;
 schematic ,/adj./@图解的;,/adj./@概要的;,/adj./@示意的;,/adj./@圖示的;,/adj./@概略的;
 scientist ,/n./@科学家;
+scrapbook ,/n./@剪貼簿;
 scrutable ,/adj./@可以了解的;
 sculpture ,/n./@雕塑;
 secession ,/n./@脫離;,/n./@分離;,/n./@退出;
@@ -846,6 +852,7 @@ symbiosis ,/n./@共生;
 synagogue ,/n./@犹太教堂;
 synthesis ,/n./@綜合;,/n./@合成;
 synthetic ,/adj./@合成的;,/adj./@人造的;,/adj./@綜合的;
+tantalize ,/vt./@逗惹;,/vt./@折磨;,/vt./@撩撥;
 technique ,/n./@技术;
 telephone ,/n./@电话;
 telescope ,/n./@望远镜;
