--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -256,6 +256,7 @@ enticement
 entrancing
 equivalent
 equivocate
+escalation
 especially
 evaluation
 evangelist
@@ -473,6 +474,7 @@ playwright
 polychrome
 population
 possession
+precarious
 precaution
 precedence
 prediction
@@ -506,6 +508,7 @@ recreation
 recurrence
 referendum
 reflection
+refraction
 regularity
 regulation
 regulatory
@@ -556,6 +559,7 @@ similarity
 simplicity
 smartphone
 smithereen
+smokestack
 solidarity
 specialist
 specialize
