--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -186,6 +186,7 @@ busty
 cabin
 cable
 cache
+cadet
 camel
 canal
 candy
@@ -381,6 +382,7 @@ empty
 enemy
 enjoy
 enrol
+ensue
 enter
 entry
 epoch
@@ -557,6 +559,7 @@ hepta
 hight
 hobby
 hoist
+hokum
 holly
 honey
 honor
@@ -900,6 +903,7 @@ rinse
 risky
 rival
 river
+rivet
 roast
 robot
 rogue
@@ -923,6 +927,7 @@ sauce
 savor
 scale
 scalp
+scape
 scare
 scarf
 scary
@@ -1201,6 +1206,7 @@ treat
 trend
 trial
 trick
+trite
 troll
 troop
 trout
