--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -331,6 +331,7 @@ crises
 crisis
 crotch
 crouch
+cruise
 crunch
 crutch
 cuboid
@@ -430,6 +431,7 @@ driver
 duffel
 duress
 during
+duster
 dynamo
 easier
 easily
@@ -682,6 +684,7 @@ indeed
 indent
 indict
 induce
+infamy
 infant
 infect
 infill
