--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -140,6 +140,7 @@ broccoli
 brochure
 brunette
 building
+bulkhead
 burglary
 business
 calamity
@@ -386,6 +387,7 @@ engineer
 enormous
 entangle
 entirely
+entirety
 entrance
 entrench
 envelope
@@ -514,6 +516,7 @@ homeland
 homework
 homicide
 honorary
+hooligan
 hopeless
 hornbill
 horrible
@@ -540,6 +543,7 @@ immortal
 immunity
 imperial
 implicit
+impurity
 inactive
 incident
 increase
