--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -7,6 +7,7 @@ acceptive
 accessory
 acclimate
 accompany
+accordion
 acquiesce
 addiction
 addictive
@@ -435,6 +436,7 @@ hibernate
 highlight
 hilarious
 hindrance
+hindsight
 histogram
 homefront
 homegrown
@@ -512,6 +514,7 @@ intuition
 intuitive
 invention
 inventory
+inversion
 invisible
 irregular
 isolation
@@ -537,6 +540,7 @@ longevity
 longitude
 lubricant
 lubricate
+lucrative
 luxurious
 machinery
 magnitude
@@ -769,8 +773,10 @@ salvation
 sanctuary
 sarcastic
 satisfied
+scapegoat
 schematic
 scientist
+scrapbook
 scrutable
 sculpture
 secession
@@ -846,6 +852,7 @@ symbiosis
 synagogue
 synthesis
 synthetic
+tantalize
 technique
 telephone
 telescope
