--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -43,6 +43,7 @@ charismatic
 chlorophyll
 chloroplast
 cholesterol
+clairvoyant
 clandestine
 coincidence
 collaborate
@@ -173,6 +174,7 @@ headquarter
 hospitality
 humiliation
 humiliatory
+hypothermic
 hypothesize
 illuminatus
 imagination
