--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -778,6 +778,7 @@ nostril
 notable
 nothing
 nourish
+novella
 novelty
 noxious
 nuclear
@@ -1205,6 +1206,7 @@ thunder
 tobacco
 toddler
 tonight
+tonnage
 tornado
 torpedo
 torrent
